@@ -526,7 +526,16 @@ surface</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>collocation_index</td>
+<tr class="row-even"><td>cloud_type</td>
+<td>&#160;</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>&#160;</td>
+</tr>
+<tr class="row-odd"><td>collocation_index</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -535,7 +544,7 @@ surface</td>
 <td>&#160;</td>
 <td>zero-based index as provided in the collocation result file</td>
 </tr>
-<tr class="row-odd"><td>column_density</td>
+<tr class="row-even"><td>column_density</td>
 <td>stratospheric,
 tropospheric</td>
 <td>amf, apriori,
@@ -546,7 +555,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-even"><td>column_number_density</td>
+<tr class="row-odd"><td>column_number_density</td>
 <td>stratospheric,
 tropospheric</td>
 <td>amf, apriori,
@@ -557,7 +566,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>count</td>
+<tr class="row-even"><td>count</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -566,7 +575,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>datetime</td>
+<tr class="row-odd"><td>datetime</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -575,7 +584,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>datetime_length</td>
+<tr class="row-even"><td>datetime_length</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -584,7 +593,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>datetime_start</td>
+<tr class="row-odd"><td>datetime_start</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -593,7 +602,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>datetime_stop</td>
+<tr class="row-even"><td>datetime_stop</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -602,7 +611,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>density</td>
+<tr class="row-odd"><td>density</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -611,7 +620,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-odd"><td>extinction_coefficient</td>
+<tr class="row-even"><td>extinction_coefficient</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -620,7 +629,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>frequency</td>
+<tr class="row-odd"><td>frequency</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -629,7 +638,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>frequency_irradiance</td>
+<tr class="row-even"><td>frequency_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -638,7 +647,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>frequency_photon_irradiance</td>
+<tr class="row-odd"><td>frequency_photon_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -647,7 +656,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>frequency_photon_radiance</td>
+<tr class="row-even"><td>frequency_photon_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -656,7 +665,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>frequency_photon_transmittance</td>
+<tr class="row-odd"><td>frequency_photon_transmittance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -665,7 +674,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>frequency_radiance</td>
+<tr class="row-even"><td>frequency_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -674,7 +683,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>frequency_transmittance</td>
+<tr class="row-odd"><td>frequency_transmittance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -683,7 +692,7 @@ avk, dfs, sic</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>geoid_height</td>
+<tr class="row-even"><td>geoid_height</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -692,7 +701,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>geopotential</td>
+<tr class="row-odd"><td>geopotential</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -701,7 +710,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>geopotential_height</td>
+<tr class="row-even"><td>geopotential_height</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -710,7 +719,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>hlos_wind_velocity</td>
+<tr class="row-odd"><td>hlos_wind_velocity</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -719,7 +728,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>hlos means ‘horizontal line of sight’</td>
 </tr>
-<tr class="row-odd"><td>index</td>
+<tr class="row-even"><td>index</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -728,7 +737,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>zero-based index of the sample within the source product</td>
 </tr>
-<tr class="row-even"><td>integration_time</td>
+<tr class="row-odd"><td>integration_time</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -740,6 +749,15 @@ avk, dfs, sic</td>
 only use if integration time differs from datetime_length;
 integration_time longer than datetime_length that covers multiple
 datetime values means replication of measured value in time dimension</td>
+</tr>
+<tr class="row-even"><td>land_type</td>
+<td>&#160;</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>&#160;</td>
 </tr>
 <tr class="row-odd"><td>latitude</td>
 <td>sensor</td>
@@ -940,7 +958,34 @@ relation between the variables ‘density’ and ‘number_density’)</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>sensor_azimuth_angle</td>
+<tr class="row-odd"><td>scene_albedo</td>
+<td>&#160;</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>&#160;</td>
+</tr>
+<tr class="row-even"><td>scene_pressure</td>
+<td>&#160;</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>&#160;</td>
+</tr>
+<tr class="row-odd"><td>scene_type</td>
+<td>&#160;</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>X</td>
+<td>&#160;</td>
+<td>&#160;</td>
+</tr>
+<tr class="row-even"><td>sensor_azimuth_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -949,7 +994,7 @@ relation between the variables ‘density’ and ‘number_density’)</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>sensor_elevation_angle</td>
+<tr class="row-odd"><td>sensor_elevation_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -958,7 +1003,7 @@ relation between the variables ‘density’ and ‘number_density’)</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>sensor_name</td>
+<tr class="row-even"><td>sensor_name</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -967,7 +1012,7 @@ relation between the variables ‘density’ and ‘number_density’)</td>
 <td>&#160;</td>
 <td>used mainly for ground based networks to provide a unique sensor id</td>
 </tr>
-<tr class="row-even"><td>sensor_zenith_angle</td>
+<tr class="row-odd"><td>sensor_zenith_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -976,7 +1021,7 @@ relation between the variables ‘density’ and ‘number_density’)</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>site_name</td>
+<tr class="row-even"><td>site_name</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -985,7 +1030,7 @@ relation between the variables ‘density’ and ‘number_density’)</td>
 <td>&#160;</td>
 <td>used for data of a specific named geographical location</td>
 </tr>
-<tr class="row-even"><td>solar_azimuth_angle</td>
+<tr class="row-odd"><td>solar_azimuth_angle</td>
 <td>sensor,
 surface, toa</td>
 <td>&#160;</td>
@@ -995,7 +1040,7 @@ surface, toa</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>solar_declination_angle</td>
+<tr class="row-even"><td>solar_declination_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -1004,7 +1049,7 @@ surface, toa</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>solar_elevation_angle</td>
+<tr class="row-odd"><td>solar_elevation_angle</td>
 <td>sensor,
 surface, toa</td>
 <td>&#160;</td>
@@ -1014,7 +1059,7 @@ surface, toa</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>solar_hour_angle</td>
+<tr class="row-even"><td>solar_hour_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -1023,7 +1068,7 @@ surface, toa</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>solar_irradiance</td>
+<tr class="row-odd"><td>solar_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1032,7 +1077,7 @@ surface, toa</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>solar_zenith_angle</td>
+<tr class="row-even"><td>solar_zenith_angle</td>
 <td>sensor,
 surface, toa,</td>
 <td>&#160;</td>
@@ -1042,7 +1087,7 @@ surface, toa,</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>sun_normalized_radiance</td>
+<tr class="row-odd"><td>sun_normalized_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1051,7 +1096,7 @@ surface, toa,</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>surface_albedo</td>
+<tr class="row-even"><td>surface_albedo</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1060,7 +1105,7 @@ surface, toa,</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>temperature</td>
+<tr class="row-odd"><td>temperature</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1069,7 +1114,7 @@ surface, toa,</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>tropopause_altitude</td>
+<tr class="row-even"><td>tropopause_altitude</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1078,7 +1123,7 @@ surface, toa,</td>
 <td>&#160;</td>
 <td>altitude of the troposphere/stratosphere boundary location</td>
 </tr>
-<tr class="row-even"><td>tropopause_pressure</td>
+<tr class="row-odd"><td>tropopause_pressure</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1087,7 +1132,7 @@ surface, toa,</td>
 <td>&#160;</td>
 <td>pressure level of the troposphere/stratosphere boundary location</td>
 </tr>
-<tr class="row-odd"><td>validity</td>
+<tr class="row-even"><td>validity</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -1097,7 +1142,7 @@ surface, toa,</td>
 <td>validity flag for each time sample or whole product;
 only to be used if validity flag is for multiple variables combined</td>
 </tr>
-<tr class="row-even"><td>viewing_azimuth_angle</td>
+<tr class="row-odd"><td>viewing_azimuth_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1106,7 +1151,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>viewing_elevation_angle</td>
+<tr class="row-even"><td>viewing_elevation_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1115,7 +1160,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>viewing_zenith_angle</td>
+<tr class="row-odd"><td>viewing_zenith_angle</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1124,7 +1169,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>virtual_temperature</td>
+<tr class="row-even"><td>virtual_temperature</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1133,7 +1178,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavelength</td>
+<tr class="row-odd"><td>wavelength</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1142,7 +1187,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavelength_irradiance</td>
+<tr class="row-even"><td>wavelength_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1151,7 +1196,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavelength_photon_irradiance</td>
+<tr class="row-odd"><td>wavelength_photon_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1160,7 +1205,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavelength_photon_radiance</td>
+<tr class="row-even"><td>wavelength_photon_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1169,7 +1214,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavelength_photon_transmittance</td>
+<tr class="row-odd"><td>wavelength_photon_transmittance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1178,7 +1223,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavelength_radiance</td>
+<tr class="row-even"><td>wavelength_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1187,7 +1232,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavelength_transmittance</td>
+<tr class="row-odd"><td>wavelength_transmittance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1196,7 +1241,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavenumber</td>
+<tr class="row-even"><td>wavenumber</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1205,7 +1250,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavenumber_irradiance</td>
+<tr class="row-odd"><td>wavenumber_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1214,7 +1259,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavenumber_photon_irradiance</td>
+<tr class="row-even"><td>wavenumber_photon_irradiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1223,7 +1268,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavenumber_photon_radiance</td>
+<tr class="row-odd"><td>wavenumber_photon_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1232,7 +1277,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavenumber_photon_transmittance</td>
+<tr class="row-even"><td>wavenumber_photon_transmittance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1241,7 +1286,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wavenumber_radiance</td>
+<tr class="row-odd"><td>wavenumber_radiance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1250,7 +1295,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wavenumber_transmittance</td>
+<tr class="row-even"><td>wavenumber_transmittance</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1259,7 +1304,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>X</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>wind_speed</td>
+<tr class="row-odd"><td>wind_speed</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1268,7 +1313,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>wind_direction</td>
+<tr class="row-even"><td>wind_direction</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1277,7 +1322,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>year</td>
+<tr class="row-odd"><td>year</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>&#160;</td>
@@ -1286,7 +1331,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>integer value representing a year</td>
 </tr>
-<tr class="row-odd"><td>zonal_wind_velocity</td>
+<tr class="row-even"><td>zonal_wind_velocity</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1295,7 +1340,7 @@ only to be used if validity flag is for multiple variables combined</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_column_density</td>
+<tr class="row-odd"><td>&lt;species&gt;_column_density</td>
 <td>stratospheric,
 tropospheric</td>
 <td>amf, apriori,
@@ -1306,7 +1351,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_slant_column_density</td>
+<tr class="row-even"><td>&lt;species&gt;_slant_column_density</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1315,7 +1360,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-even"><td>&lt;pm&gt;_column_density</td>
+<tr class="row-odd"><td>&lt;pm&gt;_column_density</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&#160;</td>
@@ -1325,7 +1370,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_column_number_density</td>
+<tr class="row-even"><td>&lt;species&gt;_column_number_density</td>
 <td>stratospheric,
 tropospheric</td>
 <td>amf, apriori,
@@ -1336,7 +1381,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_slant_column_number_density</td>
+<tr class="row-odd"><td>&lt;species&gt;_slant_column_number_density</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1345,7 +1390,7 @@ avk, dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_column_mass_mixing_ratio</td>
+<tr class="row-even"><td>&lt;species&gt;_column_mass_mixing_ratio</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&#160;</td>
@@ -1355,7 +1400,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_column_mass_mixing_ratio_dry_air</td>
+<tr class="row-odd"><td>&lt;species&gt;_column_mass_mixing_ratio_dry_air</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&#160;</td>
@@ -1365,7 +1410,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_column_volume_mixing_ratio</td>
+<tr class="row-even"><td>&lt;species&gt;_column_volume_mixing_ratio</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&#160;</td>
@@ -1375,7 +1420,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_column_volume_mixing_ratio_dry_air</td>
+<tr class="row-odd"><td>&lt;species&gt;_column_volume_mixing_ratio_dry_air</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&#160;</td>
@@ -1385,7 +1430,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_density</td>
+<tr class="row-even"><td>&lt;species&gt;_density</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1394,7 +1439,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-even"><td>&lt;pm&gt;_density</td>
+<tr class="row-odd"><td>&lt;pm&gt;_density</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1403,7 +1448,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-odd"><td>O3_effective_temperature</td>
+<tr class="row-even"><td>O3_effective_temperature</td>
 <td>&#160;</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1412,7 +1457,7 @@ tropospheric</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_mass_mixing_ratio</td>
+<tr class="row-odd"><td>&lt;species&gt;_mass_mixing_ratio</td>
 <td>surface</td>
 <td>apriori, avk,
 dfs, sic</td>
@@ -1422,7 +1467,7 @@ dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_mass_mixing_ratio_dry_air</td>
+<tr class="row-even"><td>&lt;species&gt;_mass_mixing_ratio_dry_air</td>
 <td>surface</td>
 <td>apriori, avk,
 dfs, sic</td>
@@ -1432,7 +1477,7 @@ dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_number_density</td>
+<tr class="row-odd"><td>&lt;species&gt;_number_density</td>
 <td>surface</td>
 <td>apriori, avk,
 dfs, sic</td>
@@ -1442,7 +1487,7 @@ dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_partial_pressure</td>
+<tr class="row-even"><td>&lt;species&gt;_partial_pressure</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1451,7 +1496,7 @@ dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_partial_pressure_dry_air</td>
+<tr class="row-odd"><td>&lt;species&gt;_partial_pressure_dry_air</td>
 <td>surface</td>
 <td>&#160;</td>
 <td>X</td>
@@ -1460,7 +1505,7 @@ dfs, sic</td>
 <td>&#160;</td>
 <td>&#160;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_volume_mixing_ratio</td>
+<tr class="row-even"><td>&lt;species&gt;_volume_mixing_ratio</td>
 <td>surface</td>
 <td>apriori, avk,
 dfs, sic</td>
@@ -1470,7 +1515,7 @@ dfs, sic</td>
 <td>&#160;</td>
 <td>this is equal to ‘number mixing ratio’</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_volume_mixing_ratio_dry_air</td>
+<tr class="row-odd"><td>&lt;species&gt;_volume_mixing_ratio_dry_air</td>
 <td>surface</td>
 <td>apriori, avk,
 dfs, sic</td>
